# lxqt-panel

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  BuildPlugin.cmake  CHANGELOG  CMakeLists.txt  LICENSE  README.md  cpuload.ts  cpuload_ar.ts  cpuload_ca.ts  cpuload_cs.ts  cpuload_cs_CZ.ts  cpuload_da.ts  cpuload_da_DK.ts  cpuload_de.ts  cpuload_el.ts  cpuload_eo.ts  cpuload_es.ts  cpuload_es_VE.ts  cpuload_eu.ts  cpuload_fi.ts  cpuload_fr.ts  cpuload_fr_FR.ts  cpuload_hr.ts  cpuload_hu.ts  cpuload_id.ts  cpuload_it.ts  cpuload_ja.ts  cpuload_lt.ts  cpuload_nl.ts  cpuload_pl.ts  cpuload_pl_PL.ts  cpuload_pt.ts  cpuload_pt_BR.ts  cpuload_ro_RO.ts  cpuload_ru.ts  cpuload_sl.ts  cpuload_th_TH.ts  (+495 more)
.ci/: build.sh  (+1 more)
autostart/: CMakeLists.txt  lxqt-panel.desktop  lxqt-panel.desktop.in  lxqt-panel_wayland.desktop  lxqt-panel_wayland.desktop.in
autostart/translations/: lxqt-panel_ar.desktop  lxqt-panel_ar.desktop.yaml  lxqt-panel_bg.desktop.yaml  lxqt-panel_ca.desktop  lxqt-panel_ca.desktop.yaml  lxqt-panel_cs.desktop  lxqt-panel_cs_CZ.desktop  lxqt-panel_da.desktop  lxqt-panel_da_DK.desktop  lxqt-panel_de.desktop.yaml  lxqt-panel_de_DE.desktop  lxqt-panel_el.desktop.yaml  lxqt-panel_el_GR.desktop  lxqt-panel_eo.desktop  lxqt-panel_eo.desktop.yaml  lxqt-panel_es.desktop  lxqt-panel_es_VE.desktop  lxqt-panel_et.desktop.yaml  lxqt-panel_eu.desktop  lxqt-panel_eu.desktop.yaml  lxqt-panel_fi.desktop  lxqt-panel_fi.desktop.yaml  lxqt-panel_fr.desktop.yaml  lxqt-panel_fr_FR.desktop  lxqt-panel_he.desktop.yaml  lxqt-panel_hr.desktop.yaml  lxqt-panel_hu.desktop  lxqt-panel_hu_HU.desktop  lxqt-panel_ia.desktop  lxqt-panel_ia.desktop.yaml  lxqt-panel_id.desktop.yaml  lxqt-panel_it.desktop.yaml  lxqt-panel_it_IT.desktop  lxqt-panel_ja.desktop  lxqt-panel_ja.desktop.yaml  lxqt-panel_ka.desktop.yaml  lxqt-panel_kab.desktop.yaml  lxqt-panel_ko.desktop.yaml  lxqt-panel_lg.desktop.yaml  lxqt-panel_lt.desktop  (+26 more)
panel/: CMakeLists.txt  fixx11h.h  ilxqtpanel.h  ilxqtpanelplugin.h  irazorpanelplugin.h  lxqtpanel.cpp  lxqtpanel.h  lxqtpanelapplication.cpp  lxqtpanelapplication.h  lxqtpanelapplication_p.h  lxqtpanelglobals.h  lxqtpanellayout.cpp  lxqtpanellayout.h  lxqtpanellimits.h  lxqtpanelpluginconfigdialog.cpp  lxqtpanelpluginconfigdialog.h  main.cpp  panelpluginsmodel.cpp  panelpluginsmodel.h  plugin.cpp  plugin.h  pluginmoveprocessor.cpp  pluginmoveprocessor.h  pluginsettings.cpp  pluginsettings.h  pluginsettings_p.h  popupmenu.cpp  popupmenu.h  razorpanel.cpp  razorpanel.h  razorpanelapplication.cpp  razorpanelapplication.h  razorpanellayout.cpp  razorpanelpluginconfigdialog.h  windownotifier.cpp  windownotifier.h
plugin-advancedmenu/: CMakeLists.txt
plugin-fancymenu/: CMakeLists.txt  listView.h  lxqtfancymenu.cpp  lxqtfancymenu.h  lxqtfancymenuappmap.cpp  lxqtfancymenuappmap.h  lxqtfancymenuappmodel.cpp  lxqtfancymenuappmodel.h  lxqtfancymenucategoriesmodel.cpp  lxqtfancymenucategoriesmodel.h  lxqtfancymenuconfiguration.cpp  lxqtfancymenuconfiguration.h  lxqtfancymenuconfiguration.ui  lxqtfancymenucontextmenuutils.cpp  lxqtfancymenucontextmenuutils.h  lxqtfancymenushortcututils.cpp  lxqtfancymenushortcututils.h  lxqtfancymenutypes.h  lxqtfancymenuwindow.cpp  lxqtfancymenuwindow.h
plugin-kbindicator/: CMakeLists.txt  kbindicator-plugin.cpp  kbindicator_hr.ts  lxqtkbindicator.cpp  lxqtkbindicator.h  lxqtkbindicatorconfiguration.cpp  lxqtkbindicatorconfiguration.h  lxqtkbindicatorconfiguration.ui  razorkbindicatorconfiguration.h
plugin-mainmenu/: CMakeLists.txt  actionview.cpp  actionview.h  lxqtmainmenu.cpp  lxqtmainmenu.h  lxqtmainmenuconfiguration.cpp  lxqtmainmenuconfiguration.h  lxqtmainmenuconfiguration.ui  mainmenu_hr.ts  menustyle.cpp  menustyle.h  razormainmenu.cpp  razormainmenu.h  razormainmenuconfiguration.h  razormainmenuconfiguration.ui  xdgcachedmenu.cpp  xdgcachedmenu.h
plugin-mount/: CMakeLists.txt  button.cpp  button.h  configuration.cpp  configuration.h  configuration.ui  lxqtmountconfiguration.cpp  lxqtmountconfiguration.h  lxqtmountconfiguration.ui  lxqtmountplugin.cpp  lxqtmountplugin.h  menudiskitem.cpp  menudiskitem.h  mount_hr.ts  mountbutton.cpp  mountbutton.h  popup.cpp  popup.h  razormountplugin.cpp  razormountplugin.h
plugin-qeyes/: CMakeLists.txt  main.cpp  main.h  qeyes.cpp  qeyes.h  qeyesconfigdialog.cpp  qeyesconfigdialog.h  qeyesimagewidget.cpp  qeyesimagewidget.h  qeyesplugin.desktop  qeyesvectorwidget.cpp  qeyesvectorwidget.h  qeyeswidget.cpp  qeyeswidget.h
plugin-quicklaunch/: CMakeLists.txt  desktopfile.cpp  desktopfile.h  lxqtquicklaunch.cpp  lxqtquicklaunch.h  lxqtquicklaunchplugin.cpp  lxqtquicklaunchplugin.h  quicklaunchaction.cpp  quicklaunchaction.h  quicklaunchbutton.cpp  quicklaunchbutton.h  razorquicklaunch.cpp  razorquicklaunch.h
plugin-showdesktop/: CMakeLists.txt  showdesktop.cpp  showdesktop.h
plugin-statusnotifier/: CMakeLists.txt  dbustypes.cpp  dbustypes.h  sniasync.cpp  sniasync.h  statusnotifier.cpp  statusnotifier.h  statusnotifierbutton.cpp  statusnotifierbutton.h  statusnotifierconfiguration.cpp  statusnotifierconfiguration.h  statusnotifierconfiguration.ui  statusnotifieriteminterface.cpp  statusnotifieriteminterface.h  statusnotifierproxy.cpp  statusnotifierproxy.h  statusnotifierwatcher.cpp  statusnotifierwatcher.h  statusnotifierwidget.cpp  statusnotifierwidget.h
plugin-sysstat/: CMakeLists.txt  lxqtsysstat.cpp  lxqtsysstat.h  lxqtsysstatcolors.cpp  lxqtsysstatcolors.h  lxqtsysstatcolors.ui  lxqtsysstatcolours.cpp  lxqtsysstatcolours.h  lxqtsysstatcolours.ui  lxqtsysstatconfiguration.cpp  lxqtsysstatconfiguration.h  lxqtsysstatconfiguration.ui  lxqtsysstatutils.cpp  lxqtsysstatutils.h  razorsysstatconfiguration.h  sysstat_hr.ts
plugin-tray/: CMakeLists.txt  fdoselectionmanager.cpp  fdoselectionmanager.h  lxqttray.cpp  lxqttray.h  lxqttrayconfiguration.cpp  lxqttrayconfiguration.h  lxqttrayconfiguration.ui  lxqttrayplugin.cpp  lxqttrayplugin.h  razortray.cpp  razortray.h  snidbus.cpp  snidbus.h  sniproxy.cpp  sniproxy.h  trayicon.cpp  trayicon.h  xcbutils.h  xfitman.cpp  xfitman.h  xtestsender.cpp  xtestsender.h
(+3451 files in other folders)
